{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 867,
  "lineage": "d9c7ac89-5d98-3c7e-dcc4-336031dcda66",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0976bc170a7146777",
            "arn": "arn:aws:ec2:us-east-1:897722688307:elastic-ip/eipalloc-0976bc170a7146777",
            "association_id": "eipassoc-03e71f8daac7e3528",
            "domain": "vpc",
            "id": "eipalloc-0976bc170a7146777",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0780f4836f32bb0a8",
            "private_dns": "ip-10-0-192-18.ec2.internal",
            "private_ip": "10.0.192.18",
            "public_dns": "ec2-3-222-109-157.compute-1.amazonaws.com",
            "public_ip": "3.222.109.157",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-poc-nat-us-east-1a"
            },
            "tags_all": {
              "Name": "eks-poc-nat-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dfd803386194b4cb",
            "arn": "arn:aws:ec2:us-east-1:897722688307:elastic-ip/eipalloc-0dfd803386194b4cb",
            "association_id": "eipassoc-0b5937c401a355f58",
            "domain": "vpc",
            "id": "eipalloc-0dfd803386194b4cb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01f6315f7da6fc055",
            "private_dns": "ip-10-0-193-82.ec2.internal",
            "private_ip": "10.0.193.82",
            "public_dns": "ec2-44-208-81-176.compute-1.amazonaws.com",
            "public_ip": "44.208.81.176",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-poc-nat-us-east-1b"
            },
            "tags_all": {
              "Name": "eks-poc-nat-us-east-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085de75131ca15748",
            "arn": "arn:aws:ec2:us-east-1:897722688307:elastic-ip/eipalloc-085de75131ca15748",
            "association_id": "eipassoc-0f6e84dd12e61d64d",
            "domain": "vpc",
            "id": "eipalloc-085de75131ca15748",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bc4e4152a254adf3",
            "private_dns": "ip-10-0-194-23.ec2.internal",
            "private_ip": "10.0.194.23",
            "public_dns": "ec2-98-82-226-117.compute-1.amazonaws.com",
            "public_ip": "98.82.226.117",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-poc-nat-us-east-1c"
            },
            "tags_all": {
              "Name": "eks-poc-nat-us-east-1c"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722688307:internet-gateway/igw-01bfaf2382eddf7fe",
            "id": "igw-01bfaf2382eddf7fe",
            "owner_id": "897722688307",
            "tags": {
              "Name": "eks-poc-igw"
            },
            "tags_all": {
              "Name": "eks-poc-igw"
            },
            "vpc_id": "vpc-09278204773b869ed"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0976bc170a7146777",
            "association_id": "eipassoc-03e71f8daac7e3528",
            "connectivity_type": "public",
            "id": "nat-01d22831abd457ee7",
            "network_interface_id": "eni-0780f4836f32bb0a8",
            "private_ip": "10.0.192.18",
            "public_ip": "3.222.109.157",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f74cf7bf3a98872c",
            "tags": {
              "Name": "eks-poc-nat-us-east-1a"
            },
            "tags_all": {
              "Name": "eks-poc-nat-us-east-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.eks_igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dfd803386194b4cb",
            "association_id": "eipassoc-0b5937c401a355f58",
            "connectivity_type": "public",
            "id": "nat-0e5a76cf42de0dd72",
            "network_interface_id": "eni-01f6315f7da6fc055",
            "private_ip": "10.0.193.82",
            "public_ip": "44.208.81.176",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0637cd87ae776092c",
            "tags": {
              "Name": "eks-poc-nat-us-east-1b"
            },
            "tags_all": {
              "Name": "eks-poc-nat-us-east-1b"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.eks_igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085de75131ca15748",
            "association_id": "eipassoc-0f6e84dd12e61d64d",
            "connectivity_type": "public",
            "id": "nat-0db29ab79e33f469a",
            "network_interface_id": "eni-0bc4e4152a254adf3",
            "private_ip": "10.0.194.23",
            "public_ip": "98.82.226.117",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c01291d8e27102c1",
            "tags": {
              "Name": "eks-poc-nat-us-east-1c"
            },
            "tags_all": {
              "Name": "eks-poc-nat-us-east-1c"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.eks_igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722688307:route-table/rtb-0e90c0159c7bae75b",
            "id": "rtb-0e90c0159c7bae75b",
            "owner_id": "897722688307",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01d22831abd457ee7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-poc-private-us-east-1a-rt"
            },
            "tags_all": {
              "Name": "eks-poc-private-us-east-1a-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09278204773b869ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.eks_igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722688307:route-table/rtb-08d4a5b819f64ab53",
            "id": "rtb-08d4a5b819f64ab53",
            "owner_id": "897722688307",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e5a76cf42de0dd72",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-poc-private-us-east-1b-rt"
            },
            "tags_all": {
              "Name": "eks-poc-private-us-east-1b-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09278204773b869ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.eks_igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722688307:route-table/rtb-0217ed14aabea9328",
            "id": "rtb-0217ed14aabea9328",
            "owner_id": "897722688307",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0db29ab79e33f469a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-poc-private-us-east-1c-rt"
            },
            "tags_all": {
              "Name": "eks-poc-private-us-east-1c-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09278204773b869ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.eks_igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722688307:route-table/rtb-0ef50ce49738c0c59",
            "id": "rtb-0ef50ce49738c0c59",
            "owner_id": "897722688307",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01bfaf2382eddf7fe",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-poc-public-rt"
            },
            "tags_all": {
              "Name": "eks-poc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09278204773b869ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.eks_igw",
            "module.vpc.aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083326536926201d5",
            "route_table_id": "rtb-0e90c0159c7bae75b",
            "subnet_id": "subnet-06ba5fa3150070fd2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.eks_igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0319747bd6afb4add",
            "route_table_id": "rtb-08d4a5b819f64ab53",
            "subnet_id": "subnet-000c8511da7007e00"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.eks_igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccb656c4d58303d6",
            "route_table_id": "rtb-0217ed14aabea9328",
            "subnet_id": "subnet-08c1daead1f220166"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.eks_igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dbed493be0f92f4",
            "route_table_id": "rtb-0ef50ce49738c0c59",
            "subnet_id": "subnet-0f74cf7bf3a98872c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.eks_igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0460940b474a994ac",
            "route_table_id": "rtb-0ef50ce49738c0c59",
            "subnet_id": "subnet-0637cd87ae776092c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.eks_igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00024de47f48051f5",
            "route_table_id": "rtb-0ef50ce49738c0c59",
            "subnet_id": "subnet-0c01291d8e27102c1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.eks_igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722688307:subnet/subnet-06ba5fa3150070fd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ba5fa3150070fd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722688307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-poc-private-us-east-1a",
              "kubernetes.io/cluster/dev-eks-poc": "owned",
              "kubernetes.io/role/internal-elb": "1",
              "subnet-type": "private"
            },
            "tags_all": {
              "Name": "eks-poc-private-us-east-1a",
              "kubernetes.io/cluster/dev-eks-poc": "owned",
              "kubernetes.io/role/internal-elb": "1",
              "subnet-type": "private"
            },
            "vpc_id": "vpc-09278204773b869ed"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.eks_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722688307:subnet/subnet-000c8511da7007e00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000c8511da7007e00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722688307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-poc-private-us-east-1b",
              "kubernetes.io/cluster/dev-eks-poc": "owned",
              "kubernetes.io/role/internal-elb": "1",
              "subnet-type": "private"
            },
            "tags_all": {
              "Name": "eks-poc-private-us-east-1b",
              "kubernetes.io/cluster/dev-eks-poc": "owned",
              "kubernetes.io/role/internal-elb": "1",
              "subnet-type": "private"
            },
            "vpc_id": "vpc-09278204773b869ed"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.eks_network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722688307:subnet/subnet-08c1daead1f220166",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c1daead1f220166",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722688307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-poc-private-us-east-1c",
              "kubernetes.io/cluster/dev-eks-poc": "owned",
              "kubernetes.io/role/internal-elb": "1",
              "subnet-type": "private"
            },
            "tags_all": {
              "Name": "eks-poc-private-us-east-1c",
              "kubernetes.io/cluster/dev-eks-poc": "owned",
              "kubernetes.io/role/internal-elb": "1",
              "subnet-type": "private"
            },
            "vpc_id": "vpc-09278204773b869ed"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722688307:subnet/subnet-0f74cf7bf3a98872c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.192.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f74cf7bf3a98872c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722688307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-poc-public-us-east-1a",
              "kubernetes.io/cluster/dev-eks-poc": "owned",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "tags_all": {
              "Name": "eks-poc-public-us-east-1a",
              "kubernetes.io/cluster/dev-eks-poc": "owned",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "vpc_id": "vpc-09278204773b869ed"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.eks_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722688307:subnet/subnet-0637cd87ae776092c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.193.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0637cd87ae776092c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722688307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-poc-public-us-east-1b",
              "kubernetes.io/cluster/dev-eks-poc": "owned",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "tags_all": {
              "Name": "eks-poc-public-us-east-1b",
              "kubernetes.io/cluster/dev-eks-poc": "owned",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "vpc_id": "vpc-09278204773b869ed"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.eks_network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722688307:subnet/subnet-0c01291d8e27102c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.194.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c01291d8e27102c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722688307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-poc-public-us-east-1c",
              "kubernetes.io/cluster/dev-eks-poc": "owned",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "tags_all": {
              "Name": "eks-poc-public-us-east-1c",
              "kubernetes.io/cluster/dev-eks-poc": "owned",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "vpc_id": "vpc-09278204773b869ed"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722688307:vpc/vpc-09278204773b869ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09d39c137b52aea86",
            "default_route_table_id": "rtb-039f27114a7b2ac86",
            "default_security_group_id": "sg-0feb4d011a207a142",
            "dhcp_options_id": "dopt-0ac26cb161e4117fd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09278204773b869ed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039f27114a7b2ac86",
            "owner_id": "897722688307",
            "tags": {
              "Name": "us-east-1-eks-poc-vpc"
            },
            "tags_all": {
              "Name": "us-east-1-eks-poc-vpc"
            }
          }
        }
      ]
    }
  ]
}